--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,23 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kayla Lange | WDD 131 | Basic Layout</title>
 
     <link rel="stylesheet" href="styles/layout.css">
     
 </head>
 <body>
     <div class="container">
-    <header>Header Content</header>
-    <nav class="navigation">
-        <a href="home">Home</a>
-        <a href="projects">Projects</a>
-        <a href="services">Services</a>
-        <a href="contact-us">Contact Us</a>
-    </nav>
-    <main class="main-content">Main Content</main>
-    <aside class="aside-right">Aside Content</aside>
-    <footer>Footer Content</footer>
+    <header>
+        <img src="images/profile-pic.png" alt="Profile Picture" class="profile-pic">
+        <h1>Kayla Lange | WDD 131</h1>
+        <nav class="navigation">
+            <a href="home">Home</a>
+            <a href="projects">Projects</a>
+            <a href="services">Services</a>
+            <a href="contact-us">Contact Us</a>
+        </nav>
+    </header>  
+    <main class="main-content">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus expedita aperiam unde cumque excepturi sequi, rem possimus quo consectetur quasi totam qui non mollitia! Rerum blanditiis esse molestiae nulla rem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed doloribus inventore quas nobis, ullam exercitationem nostrum error vero incidunt, maiores facere, temporibus eaque reprehenderit. Assumenda recusandae maxime consequuntur ratione eum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto quod illo ab voluptas? Porro, delectus velit nihil veritatis facere voluptatem earum eum aperiam suscipit? Repellendus et soluta quae totam obcaecati!</p>
+    </main>
+    <aside class="aside-right">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ab labore omnis perferendis nobis consectetur impedit voluptate quam ea reprehenderit? Molestias quos nostrum perferendis recusandae quia ipsum obcaecati fuga omnis.</p>
+    </aside>
+    <footer>©2024 | Kayla Lange | WDD 131</footer>
     </div>
 </body>
 </html>
