resized image for better performance

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p class="about-me">As a wife and mother of four amazing kids, my family fills my days with joy and adventure. Colorado's stunning mountains are our playground, and we love exploring them together.  My passion for design has fueled my decision to pursue a degree that equips me with the skills to become a UX Designer.  In between homework battles and conquering trails, I unwind with a captivating book, savor delicious food, or find peace on my yoga mat.</p>
             <h3>Colorado Rocky Mountains</h3>
             <hr class="solid">
-            <img src="images/rockymountains2.jpg" alt="Rocky Mountains" class="rocky-mountains">
+            <img src="images/rockymountains-resized.jpg" alt="Rocky Mountains" class="rocky-mountains">
             <p class="colorado-info">Colorado's Rocky Mountains are a major outdoor destination, famed for their dramatic peaks like Longs Peak, vast wildflower meadows, and abundant wildlife. Hiking, camping, and wildlife viewing are all popular activities in this stunning natural landscape.</p>
         </section>
         <section class="card">
