--- a/temples.html
+++ b/temples.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temple Album</title>
+    <title>Temple Album</title><meta name="description" content="WDD 131 - Dynamic Web Fundamentals Kayla Lange Temple Album">
+    <meta name="author" content="Kayla Lange">
 
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
