--- a/temples.html
+++ b/temples.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="content-wrapper">
-        <h2>Current Menu Selection</h2>
+        <h2>Home</h2>
         <div class="image-grid">
             <figure>
                 <img src="images/denver-colorado-temple.jpg" alt="Denver Colorado Temple">
