added main to html and added ::after pseudo-class

--- a/place.html
+++ b/place.html
@@ -19,6 +19,7 @@
     <header>
         <h1>Greece</h1>
     </header>
+    <main>
     <span class="color-block"></span>
     <div class="hero-container">
         <div class="hero">
@@ -28,7 +29,6 @@
                 <img src="images/hero-small.webp" alt="Greece Landscape">
             </picture>
         </div>
-        <!-- <div class="data"> -->
         <div class="data-container">
             <div id="data-h2">
                 <h2>Data</h2>
@@ -95,6 +95,7 @@
             </div>
         </div>
     </div>
+    </main>
     <footer>
         <p>©<span id="currentyear"></span> | Kayla Lange | Colorado</p>
         <p><span id="lastModified"></span></p>
