--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Kayla Lange">
 
     <link rel="stylesheet" href="styles/filtered-temples.css">
-    <link rel="stylesheet" href="styles/filtered-temples-large.css" defer>
+    <link rel="stylesheet" href="styles/filtered-temples-large.css">
 
     <script src="scripts/filtered-temples.js" defer></script>
     <script src="scripts/getdates.js" defer></script>
