--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
                 <label>Product Name
                     <select id="productSelect" name="product" required>
                         <option value="" disabled selected>Select a Product...</option>
-                        <option value="product"></option>
+                        <!-- <option value="product"></option> -->
                     </select>
                     </label>
             </fieldset>
