Project siteplan html and css

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -7,8 +7,7 @@
     <meta name="author" content="Kayla Lange">
 
     <link rel="stylesheet" href="https://use.typekit.net/cje2kso.css">
-    <!-- <link rel="stylesheet" href="styles/base.css" >
-    <script src="scripts/getdates.js" defer></script> -->
+    <link rel="stylesheet" href="styles/siteplan.css" >
 </head>
 <body>
     <header>
@@ -50,8 +49,14 @@
         </section>
         <section class="wireframe">
             <h2>Wireframe</h2>
-            <img src="" alt="">
+            <div class="wireframe_div">
+            <h2 id="wireframe1">Desktop Wireframe</h2>
+            <img src="images/beyondthebite-desktop-wireframe.webp" alt="desktop wireframe" class="desk_wireframe">
+            <h2 id="wireframe2">Mobile Wireframe</h2>
+            <img src="images/beyondthebite-mobile-wireframe.webp" alt="mobile wireframe" class="mobile_wireframe">
+            </div>
         </section>
     </main>
+    <footer><p>©2024 | Kayla Lange | Colorado</p></footer>
 </body>
 </html>
