creation of beyond the bite website including htmls files (index, experiences, about us, newsletter, and css files and js files to go with the html pages

--- a/form.html
+++ b/form.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/form.css" >
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/form.js" defer></script>
+    <script src="scripts/form2.js" defer></script>
 </head>
 <body>
     <main>
@@ -57,7 +58,7 @@
             </fieldset>
 
             <fieldset>
-                <input type="submit" value="Post Review">
+                <input type="submit" value="Post Review" class="reviewButton">
             </fieldset>
             
         </form>
