--- a/project/index.html
+++ b/project/index.html
@@ -7,10 +7,11 @@
     <meta name="author" content="Kayla Lange">
 
     <script src="scripts/getdates.js" defer></script>
-    <script src="scripts/beyond_the_bite.js" defer></script>
+    <script src="scripts/navigation.js" defer></script>
+    <script src="scripts/index_carousel.js" defer></script>
 
-    <link rel="stylesheet" href="styles/beyond_the_bite.css">
-    <link rel="stylesheet" href="styles/beyond_the_bite_large.css">
+    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/index_large.css">
 
     <link rel="preconnect" href="https://use.typekit.net/cje2kso.css">
 </head>
@@ -40,7 +41,7 @@
         <div id="testimonial_carousel" class="carousel">
             <div class="carousel_item active">
                 <p class="testimonial_text">"Content 1"</p>
-                <img src="images/alyssa_moore_copy.webp" alt="profile pic Alyssa Moore">
+                <img loading="lazy" src="images/alyssa_moore_copy.webp" alt="profile pic Alyssa Moore">
                 <div class="testimonial_info">
                     <span class="testimonial_name">Name 1</span> - 
                     <span class="testimonial_home">Home 1</span>
@@ -48,7 +49,7 @@
             </div>
             <div class="carousel_item">
                 <p class="testimonial_text">"Content 2"</p>
-                <img src="images/sage_conner.webp" alt="profile pic Sage Conner">
+                <img loading="lazy" src="images/sage_conner.webp" alt="profile pic Sage Conner">
                 <div class="testimonial_info">
                     <span class="testimonial_name">Name 2</span> - 
                     <span class="testimonial_home">Home 2</span>
@@ -56,7 +57,7 @@
             </div>
             <div class="carousel_item">
                 <p class="testimonial_text">"Content 3"</p>
-                <img src="images/florence_walker.webp" alt="profile pic Florence Walker">
+                <img loading="lazy" src="images/florence_walker.webp" alt="profile pic Florence Walker">
                 <div class="testimonial_info">
                     <span class="testimonial_name">Name 3</span> - 
                     <span class="testimonial_home">Home 3</span>
@@ -64,7 +65,7 @@
             </div>
             <div class="carousel_item">
                 <p class="testimonial_text">"Content 4"</p>
-                <img src="images/duncan_miller.webp" alt="profile pic Duncan Miller">
+                <img loading="lazy" src="images/duncan_miller.webp" alt="profile pic Duncan Miller">
                 <div class="testimonial_info">
                     <span class="testimonial_name">Name 4</span> - 
                     <span class="testimonial_home">Home 4</span>
@@ -72,7 +73,7 @@
             </div>
             <div class="carousel_item">
                 <p class="testimonial_text">"Content 5"</p>
-                <img src="images/sophia_rodriguez.webp" alt="profile pic Sophia Rodriquez">
+                <img loading="lazy" src="images/sophia_rodriguez.webp" alt="profile pic Sophia Rodriquez">
                 <div class="testimonial_info">
                     <span class="testimonial_name">Name 5</span> - 
                     <span class="testimonial_home">Home 5</span>
