--- a/project/newsletter.html
+++ b/project/newsletter.html
@@ -7,10 +7,10 @@
     <meta name="author" content="Kayla Lange">
 
     <script src="scripts/getdates.js" defer></script>
-    <script src="scripts/experiences.js" defer></script>
+    <script src="scripts/navigation.js" defer></script>
     
     <link rel="stylesheet" href="styles/experiences.css">
-    <!-- <link rel="stylesheet" href="styles/experiences_large.css"> -->
+    <link rel="stylesheet" href="styles/experiences_large.css">
 
     <link rel="preconnect" href="https://use.typekit.net/cje2kso.css">
 </head>
@@ -27,8 +27,13 @@
         </nav>
     </header>
     <main>
-        <h2>Great Choice!</h2>
-        <h3>You have successfully been subscribed to Beyond the Bite's monthly newsletter!</h3>
+        <div class="hooray_container">
+            <h2>Hooray!</h2>
+            <h3>Thanks for joining the foodie family!</h3>
+            <div class="overlay">
+                <img src="images/newsletter_hooray_copy.jpg" alt="Woman in Nature with Outstretched Arms">
+            </div>
+        </div>
     </main>
     <footer>
         <p>©<span id="currentyear"></span> | Beyond the Bite | Kayla Lange</p>
